cli/tests/inline_js_source_map_2_with_inline_contents.js.out
error: Uncaught Error: Hello world!
throw new Error("Hello world!" as any as string);
      ^
    at http://localhost:4545/cli/tests/inline_js_source_map_2.ts:6:7
